--- a/Mat3am Elhabaib/appsettings.json
+++ b/Mat3am Elhabaib/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-AGHBKJS;Initial Catalog=Restraunt;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnectionString": "Server=db19033.public.databaseasp.net; Database=db19033; User Id=db19033; Password=g#2DH5o%-T4r; Encrypt=False; MultipleActiveResultSets=True;"
 
   },
   "AllowedHosts": "*"
