--- a/Mat3am Elhabaib/appsettings.json
+++ b/Mat3am Elhabaib/appsettings.json
@@ -7,7 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=db19033.public.databaseasp.net; Database=db19033; User Id=db19033; Password=g#2DH5o%-T4r; Encrypt=False; MultipleActiveResultSets=True;"
-
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "84552723287-unfqts7td6cfgubt03tfnbsjce6mcpb8.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   },
   "AllowedHosts": "*"
 }
